2010-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* doc/multiboot.texi: Fix a typo.
	Reported by: Trond

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* doc/multiboot.texi: Define NVS and ACPI memory types.
	* doc/multiboot.h (MULTIBOOT_MEMORY_ACPI_RECLAIMABLE): New definition.
	(MULTIBOOT_MEMORY_NVS): Likewise.

2010-01-15  Robert Millan  <rmh.grub@aybabtu.com>

	* doc/boot.S: Slight adjustment to make makeinfo happy.
	* doc/kernel.c: Likewise.

2010-01-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* doc/kernel.c (cmain): Handle EGA text video information.
	* doc/multiboot.h (MULTIBOOT_FRAMEBUFFER_TYPE_EGA_TEXT): New const.

2010-01-14  Robert Millan  <rmh.grub@aybabtu.com>

	* COPYING: Replace with GPLv3 text.
	* doc/boot.S: Update to GPL version 3 or later.
	* doc/kernel.c: Likewise.

2010-01-12  Vladimir Serbinenko  <phcoder@gmail.com>
2010-01-12  Robert Millan  <rmh.grub@aybabtu.com>

	Video mode amendment by Vladimir Serbinenko.  See NEWS file for
	details.

	* NEWS: Document video mode amendment.
	* doc/multiboot.texi: Video mode ammendment.
	* doc/multiboot.h (MULTIBOOT_INFO_VIDEO_INFO): Remove macro.
	(MULTIBOOT_INFO_VBE_INFO, MULTIBOOT_INFO_FRAMEBUFFER_INFO): New macros.
	(multiboot_uint8_t): New type.
	(struct multiboot_color): New structure.
	(struct multiboot_info): Add new video mode fields.
	(MULTIBOOT_FRAMEBUFFER_TYPE_INDEXED)
	(MULTIBOOT_FRAMEBUFFER_TYPE_RGB): New macros.

	* doc/boot.S (MULTIBOOT_HEADER_FLAGS): Add `MULTIBOOT_VIDEO_MODE'.
	(multiboot_header): Include video mode information.
	* doc/kernel.c (cmain): Draw a blue diagonal line when video mode
	information is provided.

2010-01-07  Robert Millan  <rmh.grub@aybabtu.com>

	* doc/multiboot.h (MULTIBOOT_UNSUPPORTED): Remove macro (moved to
	GRUB).

2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>

	Install multiboot.h system-wide.

	* doc/Makefile.am (pkginclude_HEADERS): New variable.

2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>
